--- a/src/input.css
+++ b/src/input.css
@@ -8,13 +8,14 @@ input, select{
     outline: none;
 }
 
-input:focus{
-    box-shadow: 0px 0px 0px 1px rgba(92,124,250,0.75);
-    -webkit-box-shadow: 0px 0px 0px 2px rgba(92,124,250,0.75);
-    -moz-box-shadow: 0px 0px 0px 2px rgba(92,124,250,0.75);
+input:focus, select:focus{
+    box-shadow: 0px 0px 0px 2px #15aabf;;
+    -webkit-box-shadow: 0px 0px 0px 2px #15aabf;;
+    -moz-box-shadow: 0px 0px 0px 2px #15aabf;;
 }
 
 label{
+    margin-bottom: 4px;
     font-size: 12px;
     display: block;
 
