--- a/src/style.css
+++ b/src/style.css
@@ -1,45 +1,13 @@
-@import "input.css";
-@import "tailwind-mod.css";
+@import"input.css";
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    margin-bottom: 8px;
 
-
+    border: 1px solid gray;
 }
 
 body{
     font-family: 'Plus Jakarta Sans', sans-serif;
-}
-
-.form{
-    width: 50%;
-    margin: auto;
-
-    border: 1px solid black
-}
-
-.title{
-    padding: 16px;
-    background: #15aabf;
-}
-
-.title p{
-    font-size: 12px;
-}
-
-.content{
-    padding: 16px;
-}
-
-h2{
-    font-size: 20px;
-    font-weight: 600;
-}
-
-h3{
-    font-size: 16px;
-    font-weight: 600;
 }
