--- a/src/input.css
+++ b/src/input.css
@@ -1,23 +1,21 @@
 input, select{
-    width: 240px;
-    padding: 0.5rem;
-    
-    border: 1px solid #868e96;
+    width: 100%;
+    border: 1px solid #a3a3a3;
     border-radius: 4px;
+    padding: 4px 6px !important;
 
     outline: none;
-}
-
-input:focus, select:focus{
-    box-shadow: 0px 0px 0px 2px #15aabf;;
-    -webkit-box-shadow: 0px 0px 0px 2px #15aabf;;
-    -moz-box-shadow: 0px 0px 0px 2px #15aabf;;
+    font-size: 14px;
+    background-color: transparent;
 }
 
 label{
     margin-bottom: 4px;
     font-size: 12px;
     display: block;
+    color: #a3a3a3;
+}
 
-    color: #868e96;
+.form{
+    width: 50%;
 }
